https://bugify.idfive.com/issues/27764

--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -1812,6 +1812,7 @@
     }
   }
   &:hover {
+    color: $iastate-maroon;
     .home-link-button__arrow-wrap {
       width: rem(58);
       .arrow {
