https://bugify.idfive.com/issues/27767

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -49,6 +49,11 @@
     opacity: 0;
     transition: 0.2s opacity ease-in-out;
   }
+  p {
+    a {
+      color: $iastate-maroon;
+    }
+  }
 }
 
 .iastate22-card__cta {
