https://bugify.idfive.com/issues/27769

--- a/src/components/call-to-action/call-to-action--large.twig
+++ b/src/components/call-to-action/call-to-action--large.twig
@@ -4,7 +4,7 @@
   </div>
   <div class="call-to-action__copy-wrap">
     <h2 class="call-to-action__headline">{{title}}</h2>
-    <div>{{body|raw}}</div>
+    <div class="text-content">{{body|raw}}</div>
     {% include "@button-set" with button_set %}
   </div>
 </div>
