--- a/src/components/feature-with-large-image/feature-with-large-image.twig
+++ b/src/components/feature-with-large-image/feature-with-large-image.twig
@@ -4,7 +4,7 @@
   </div>
   <div class="feature-with-large-image__content">
     <h2>{{title}}</h2>
-    <div class="feature-with-large-image__text">{{text|raw}}</div>
+    <div class="feature-with-large-image__text text-content">{{text|raw}}</div>
     {% include "@button-set" with button_set %}
   </div>
 </div>
