--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -144,3 +144,21 @@
     }
   }
 }
+
+.call-to-action__copy-wrap {
+  .text-content {
+    margin-bottom: rem(20);
+    p {
+      a {
+        color: $white !important;
+      }
+    }
+    ul,
+    li {
+      color: $white;
+      &:before {
+        color: $white;
+      }
+    }
+  }
+}
