--- a/src/components/call-to-action/call-to-action--small.twig
+++ b/src/components/call-to-action/call-to-action--small.twig
@@ -2,7 +2,7 @@
   <div class="call-to-action__copy-wrap">
     <h2 class="call-to-action__headline">{{title}}</h2>
     {% if body %}
-    <div>{{body|raw}}</div>
+    <div><p>{{body}}</p></div>
     {% endif %}
   </div>
   {% include "@button-set" with button_set %}
