--- a/src/components/feature-with-large-image/_feature-with-large-image.scss
+++ b/src/components/feature-with-large-image/_feature-with-large-image.scss
@@ -122,4 +122,10 @@
   }
 }
 .feature-with-large-image__text {
+  &:last-child {
+    margin-bottom: 0;
+    @include media-breakpoint-up(xl) {
+      margin-bottom: rem(20);
+    }
+  }
 }
