--- a/src/components/statistic-with-text/statistic-with-text--right.twig
+++ b/src/components/statistic-with-text/statistic-with-text--right.twig
@@ -1,4 +1,4 @@
 <div class="statistic-with-text statistic-with-text--right">
   {% include "@statistic" with statistic %}
-  <div class="statistic-with-text__text">{{text|raw}}</div>
+  <div class="statistic-with-text__text text-content">{{text|raw}}</div>
 </div>
