updating site header for ecosystem variant to allow for proper headroom logo transition on scroll when no parent unit name exists

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -90,6 +90,12 @@
       display: block;
     }
   }
+  &.site-header__logo-no-parent-unit {
+    transition: 0.2s top ease-in-out, 0.2s filter ease-in-out, 0.2s transform ease-in-out;
+    .site-header--ecosystem.headroom--unpinned & {
+      transform: translateY(-100%);
+    }
+  }
 }
 
 .site-header__top {
