--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -1,7 +1,7 @@
 <header class="site-header site-header--ecosystem">
   <div class="site-header__top">
     <div class="site-header__logo-name-wrap">
-      <a href="https://www.iastate.edu/" class="site-header__logo">
+      <a href="https://www.iastate.edu/" class="site-header__logo{% if not parent_unit %} site-header__logo-no-parent-unit{% endif %}">
         <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University" loading="lazy" width="224" height="17">
       </a>
       {% if parent_unit %}<a class="site-header__parent-unit-name" href="{{ parent_unit.url }}">{{ parent_unit.name }}</a>{% endif %}
