updating call-to-action--small variant to be vertically centered

--- a/src/components/call-to-action/_call-to-action.scss
+++ b/src/components/call-to-action/_call-to-action.scss
@@ -40,6 +40,8 @@
   @include media-breakpoint-up(md) {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
   }
   @include media-breakpoint-up(xl) {
     padding-left: rem(280);
