--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -120,6 +120,13 @@ ol {
 }
 
 .text-content {
+  &:after {
+    @include media-breakpoint-up(md) {
+      content: "";
+      clear: both;
+      display: table;
+    }
+  }
   &:last-child {
     margin-bottom: rem(40);
     @include media-breakpoint-up(xl) {
