https://bugify.idfive.com/issues/27781

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -1087,6 +1087,11 @@
           &:last-child {
             margin-bottom: 0;
           }
+          .link-tertiary {
+            .arrow {
+              right: rem(-23);
+            }
+          }
         }
       }
       &:last-child {
