https://bugify.idfive.com/issues/27787

--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -698,6 +698,9 @@
   @include media-breakpoint-up(lg) {
     display: flex;
   }
+  .flickity-viewport {
+    overflow: visible;
+  }
 }
 
 .home-solutions__carousel-slide {
