--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -72,7 +72,7 @@
   .iastate22-card--linked-image & {
     position: absolute;
     background-color: $iastate-red;
-    padding: rem(31) rem(26);
+    padding: rem(31) rem(40) rem(31) rem(26);
     bottom: 0;
     left: 0;
     z-index: 1;
