--- a/src/scss/print.scss
+++ b/src/scss/print.scss
@@ -1,21 +1,21 @@
 $font-family: "Georgia", "Times New Roman", "Times", serif;
 
 @page {
-    margin: 2cm;
+  margin: 2cm;
 }
 
 html,
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: #fff !important;
-    line-height: 1.3;
-    color: #000;
-    font-family: $font-family;
-    font-size: 13pt;
+  background: #fff !important;
+  line-height: 1.3;
+  color: #000;
+  font-family: $font-family;
+  font-size: 13pt;
 }
 
 h1,
@@ -24,97 +24,99 @@ h3,
 h4,
 h5,
 h6 {
-    page-break-after: avoid;
-    page-break-inside: avoid;
-    margin: 16pt 0;
+  page-break-after: avoid;
+  page-break-inside: avoid;
+  margin: 16pt 0;
 }
 
 h1 {
-    font-size: 24pt;
+  font-size: 24pt;
 }
 
 h2 {
-    font-size: 22pt;
+  font-size: 22pt;
 }
 
 h3 {
-    font-size: 20pt;
+  font-size: 20pt;
 }
 
 h4 {
-    font-size: 18pt;
+  font-size: 18pt;
 }
 
 h5 {
-    font-size: 16pt;
+  font-size: 16pt;
 }
 
 h6 {
-    font-size: 14pt;
+  font-size: 14pt;
 }
 
 p {
-    margin: 12pt 0;
+  margin: 12pt 0;
 }
 
 a {
-    color: #000;
-    font-weight: 700;
-    text-decoration: underline;
-    page-break-inside: avoid;
-    &[href^="http"] {
-        &:after {
-            content: " < " attr(href) "> ";
-        }
+  color: #000;
+  font-weight: 700;
+  text-decoration: underline;
+  page-break-inside: avoid;
+  &[href^="http"] {
+    &:after {
+      content: " < " attr(href) "> ";
     }
+  }
 }
 
 ul,
 ol,
 dl {
-    page-break-before: avoid;
+  page-break-before: avoid;
 }
 
 blockquote {
-    page-break-inside: avoid;
+  page-break-inside: avoid;
 }
 
 img {
-    page-break-inside: avoid;
-    page-break-after: avoid;
+  page-break-inside: avoid;
+  page-break-after: avoid;
+  max-width: 100%;
+  height: auto;
 }
 
 table {
-    border: 1pt solid #000;
-    border-collapse: collapse;
-    page-break-inside: avoid;
+  border: 1pt solid #000;
+  border-collapse: collapse;
+  page-break-inside: avoid;
 }
 
 td,
 th {
-    border: 1pt solid #000;
-    padding: 4pt;
+  border: 1pt solid #000;
+  padding: 4pt;
 }
 
 iframe,
 .iframe {
-    display: none;
-    height: 0 !important;
-    width: 0 !important;
-    line-height: 0pt !important;
-    overflow: hidden !important;
-    white-space: nowrap;
+  display: none;
+  height: 0 !important;
+  width: 0 !important;
+  line-height: 0pt !important;
+  overflow: hidden !important;
+  white-space: nowrap;
 }
 
 .silc-accordion__label {
-    appearance: none;
-    border: none;
-    display: block;
-    font-family: $font-family;
-    font-size: 22pt;
-    font-weight: 700;
-    margin: 16pt 0;
-    padding: 0;
+  appearance: none;
+  border: none;
+  display: block;
+  font-family: $font-family;
+  font-size: 22pt;
+  font-weight: 700;
+  margin: 16pt 0;
+  padding: 0;
 }
 
 .site-header,
@@ -124,6 +126,18 @@ iframe,
 .silc-nav,
 .modal,
 .tablesaw-cell-label,
+.hero__subnav-wrap,
+.skip-link,
+.home-full-width-campus-photo__mobile,
+.home-hero__media-mobile,
+.home-hero__animation,
+.admission-aid-hero__graphic,
+.college-hero__graphic,
+.admission-aid-hero__media-mobile,
 [data-micromodal-trigger] {
-    display: none;
+  display: none;
+}
+
+#main-content {
+  padding-top: 0 !important;
 }
