https://bugify.idfive.com/issues/27791

--- a/src/scss/_core/_typography.scss
+++ b/src/scss/_core/_typography.scss
@@ -159,7 +159,7 @@ ol {
   .accordion-item & {
     list-style-type: none;
     counter-reset: item;
-    li {
+    > li {
       padding-left: rem(20);
       text-indent: rem(-20);
       &:before {
