--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -5,19 +5,8 @@
   }
 }
 
-// table container - specific selector for accessibility
-[role="region"][aria-labelledby][tabindex] {
-  overflow: auto;
-}
-
-[role="region"][aria-labelledby][tabindex]:focus {
-  outline: 0.1em solid rgba(0, 0, 0, 0.1);
-}
-
 // table
-.iastate22-table,
-.text-content table,
-.accordion table {
+.iastate22-table {
   background: linear-gradient(to right, #fff 30%, rgba(255, 255, 255, 0)),
     linear-gradient(to right, rgba(255, 255, 255, 0), #fff 70%) 0 100%,
     radial-gradient(farthest-side at 0% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
@@ -27,6 +16,7 @@
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
   background-position: 0 0, 100%, 0 0, 100%;
   background-attachment: local, local, scroll, scroll;
+  overflow: auto;
 
   table {
     empty-cells: show;
@@ -36,6 +26,10 @@
     margin: 0;
     color: black;
     border: rem(2) solid $light-grey;
+    overflow: auto;
+    > :not(:first-child) {
+      border-top: none;
+    }
   }
 
   caption {
