--- a/src/components/accordion/accordion.twig
+++ b/src/components/accordion/accordion.twig
@@ -3,12 +3,12 @@
 {% for section in sections %}
 {% set counter = counter + 1 %}
   <div class="accordion-item">
-    <h2 class="accordion-header" id="flush-heading{{ counter }}">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{ counter }}" aria-expanded="false" aria-controls="flush-collapse{{ counter }}">
+    <h2 class="accordion-header" id="flush-heading{{id}}-{{ counter }}">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse{{id}}-{{ counter }}" aria-expanded="false" aria-controls="flush-collapse{{id}}-{{ counter }}">
         {{ section.title }}
       </button>
     </h2>
-    <div id="flush-collapse{{ counter }}" class="accordion-collapse collapse" aria-labelledby="flush-heading{{ counter }}" data-bs-parent="#accordionFlush{{id}}">
+    <div id="flush-collapse{{id}}-{{ counter }}" class="accordion-collapse collapse" aria-labelledby="flush-heading{{id}}-{{ counter }}" data-bs-parent="#accordionFlush{{id}}">
       <div class="accordion-body">{{ section.content|raw }}</div>
     </div>
   </div>
