--- a/src/components/hero/hero--top-level-lp.twig
+++ b/src/components/hero/hero--top-level-lp.twig
@@ -1,4 +1,4 @@
-<div class="hero hero--top-level-lp">
+<div class="hero hero--top-level-lp{% if not image %} hero--top-level-lp--no-media{% endif %}">
   <div class="hero__text-wrap">
     {% include "@breadcrumb--top-level-pages" with breadcrumbs %}
     <h1 class="hero__title">{{title}}</h1>
