--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -6,7 +6,7 @@
       </a>
       {% if parent_unit %}<a class="site-header__parent-unit-name" href="{{ parent_unit.url }}">{{ parent_unit.name }}</a>{% endif %}
     </div>
-    <div class="site-header__website-title">{{ website_title }}</div>
+    <div class="site-header__website-title">{% if website_title.url %}<a href="{{website_title.url}}">{% endif %}{{ website_title.text }}{% if website_title.url %}</a>{% endif %}</div>
     <div class="site-header__utility-search-wrap">
       {% if utility_nav %}
       <nav class="site-header__utility" aria-label="Utility">
@@ -57,7 +57,7 @@
           <div>
             <div class="site-header__mega-menu-main">
               <div class="site-header__mega-menu-max-bound">
-                <div class="site-header__website-title">{{ website_title }}</div>
+                <div class="site-header__website-title">{% if website_title.url %}<a href="{{website_title.url}}">{% endif %}{{ website_title.text }}{% if website_title.url %}</a>{% endif %}</div>
                 {% if full_nav %}
                 <nav class="site-header__mega-menu-main-nav" aria-label="Main">
                   <ul>
