adding ios speciffic scroll-margin-top to correct anchor offset issue: https://bugify.idfive.com/issues/27796

--- a/src/scss/_core/_base.scss
+++ b/src/scss/_core/_base.scss
@@ -172,3 +172,12 @@ ol {
     pointer-events: initial;
   }
 }
+
+// Adding scroll-margin top only for ios anchors
+@supports (-webkit-touch-callout: none) {
+  #main-content {
+    *:target {
+      scroll-margin-top: rem(30);
+    }
+  }
+}
