Update to Majors Minors Certificates form id and anchor: https://bugify.idfive.com/issues/27796

--- a/src/components/pages/majors-minors-certificates.twig
+++ b/src/components/pages/majors-minors-certificates.twig
@@ -17,7 +17,7 @@
     {% include "@button-set" with explore.button_set %}
   </div>
 
-  <form class="iastate22-form maj-min-cert-program-search">
+  <form class="iastate22-form maj-min-cert-program-search" id="majMinSearch">
     <h2 class="maj-min-cert-program-search__title">{{ search.title }}</h2>
     <label class="search-label" for="search">{{ search.form.label }}</label>
     <input id="search" type="text">
