--- a/src/components/pages/personal-profile-page.twig
+++ b/src/components/pages/personal-profile-page.twig
@@ -6,12 +6,12 @@
 
 {% block content %}
 <script>
-  document.body.classList.add("faculty-bio");
+  document.body.classList.add("personal-profile");
 </script>
 
 <div class="outer-pad">
-  <div class="faculty-bio-info-card_wrap">
-    {% include "@faculty-bio-info-card" %}
+  <div class="personal-profile-info-card_wrap">
+    {% include "@personal-profile-info-card" %}
   </div>
   <div class="text-content">
     <h2>Bio</h2>
