renaming components to match client's drupal naming

--- a/src/components/feature-set/feature-set.twig
+++ b/src/components/feature-set/feature-set.twig
@@ -2,7 +2,7 @@
   <ul>
     {% for callout in callouts %}
     <li>
-        {% include "@callout" with callout %}
+        {% include "@feature" with callout %}
     </li>
     {% endfor %}
   </ul>
