--- a/src/components/pages/Main Site/college-template.twig
+++ b/src/components/pages/Main Site/college-template.twig
@@ -94,7 +94,7 @@
 
     <div class="college-opportunities" id="{{ opportunities.id }}">
       <div class="paragraph-widget paragraph-widget--callout-inset">
-        {% include "@callout-inset" with opportunities.callout_inset %}
+        {% include "@feature-with-large-image-and-intro" with opportunities.callout_inset %}
       </div>
     </div>
 
