--- a/src/components/pages/Main Site/majors-minors-certificates.twig
+++ b/src/components/pages/Main Site/majors-minors-certificates.twig
@@ -7,7 +7,7 @@
   <div class="maj-min-cert-statistic">
     <div class="paragraph-widget paragraph-widget--statistic-with-text">
       <div class="text-content">
-        {% include "@statistic-with-text--right" with statistic_with_text %}
+        {% include "@statistic--right" with statistic_with_text %}
       </div>
     </div>
   </div>
