--- a/src/components/pages/home-hero-featured-image-no-buttons.twig
+++ b/src/components/pages/home-hero-featured-image-no-buttons.twig
@@ -100,10 +100,10 @@
     </div>
   </div>
   <div class="paragraph-widget paragraph-widget--statistic-with-text">
-    {% include "@statistic-with-text" with statistic_with_text %}
+    {% include "@statistic" with statistic_with_text %}
   </div>
   <div class="paragraph-widget paragraph-widget--callout-with-image">
-    {% include "@callout-with-image" with callout_with_image %}
+    {% include "@feature-with-small-image" with callout_with_image %}
   </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
@@ -111,7 +111,7 @@
     </div>
   </div>
   <div class="paragraph-widget paragraph-widget--callout-set">
-    {% include "@callout-set" with callout_with_image_small_set_one %}
+    {% include "@feature-set" with callout_with_image_small_set_one %}
   </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
@@ -119,7 +119,7 @@
     </div>
   </div>
   <div class="paragraph-widget paragraph-widget--callout-set">
-    {% include "@callout-set" with callout_with_image_small_set_two %}
+    {% include "@feature-set" with callout_with_image_small_set_two %}
   </div>
   <div class="paragraph-widget paragraph-widget--text-html">
     <div class="text-content">
@@ -127,7 +127,7 @@
     </div>
   </div>
   <div class="paragraph-widget paragraph-widget--callout-set">
-    {% include "@callout-set" with callout_with_image_small_set_three %}
+    {% include "@feature-set" with callout_with_image_small_set_three %}
   </div>
   <div class="paragraph-widget paragraph-widget--image-grid-with-text">
     {% include "@image-grid-with-text" with image_grid_with_text %}
@@ -193,7 +193,7 @@
     {% include "@feature-with-large-image" with feature_with_large_image %}
   </div>
   <div class="paragraph-widget paragraph-widget--callout-inset">
-    {% include "@callout-inset" with callout_inset %}
+    {% include "@feature-with-large-image-and-intro" with callout_inset %}
   </div>
   <div class="paragraph-widget paragraph-widget--call-to-action--small">
     {% include "@call-to-action--small" with call_to_action_small %}
