adding pagination to post-listings news and profiles pages, updates to hover states for news and profiles teaser cards

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -43,6 +43,13 @@
         }
       }
     }
+    &.iastate22-card--teaser {
+      &:hover {
+        .iastate22-card__cta {
+          color: $iastate-red;
+        }
+      }
+    }
   }
   &:before {
     content: "";
