--- a/src/components/pages/posts-listings-profiles.twig
+++ b/src/components/pages/posts-listings-profiles.twig
@@ -8,6 +8,7 @@
   <div class="outer-pad">
     {% include "@hero--top-level-lp" with hero %}
     {% include "@card-set" with card_set %}
+    {% render "@pagination" %}
   </div>
 {% endblock %}
 
